--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: glass_button_package
-description: A new Flutter package project.
+description: This project includes a sample button for educational purposes that demonstrates the glass effect.
 version: 0.0.1
-homepage:
+homepage: https://github.com/Allahverdyy/glass_button_package
+documentation: https://github.com/Allahverdyy/glass_button_package/blob/main/README.md
 
 environment:
   sdk: '>=3.1.5 <4.0.0'
